<resources>
    <string name="app_name">Distarea</string>
    <string name="tvgenerica">"http://efacdis.disoft.es/comercio/innova/"</string>
    <string name="paginaefacdis">"http://efacdis.disoft.es/"</string>
    <string name="dirbbdd">"jdbc:postgresql://82.223.84.100/app_distarea?user=demomovil"&amp;password=dismovil</string>
    <string name="dirlogos">"http://www.distarea.es/subido/"</string>
    <string name="camposest">"app_company.idcompanyapp, idclienteglobal, nombre, telefonocontacto, mailrecepcion, fechaultimamodificacion, activo, comentariovisual, ubicacionmap, comentariointerno, desdefechaci, hastafechaci, tiendavirtual, zonainfluencia, logo, codactivageneral, restringepedidos, usuarioapp, requierefirma, requieretelefono, mailrecepcionmsg, configura"</string>
    <string name="copyrightd">&#169; Disoft Servicios Inform\u00E1ticos, S.L.</string>
    <string name="articulo">Art\u00EDculo</string>
    <string name="menviado">Mensaje enviado</string>
    <string name="mail">E-mail: </string>
    <string name="see">Ver</string>
    <string name="ms">Modo Seguro</string>
    <string name="txtcp">C\u00F3digo Postal:</string>
    <string name="txtuser">Nombre de usuario:</string>
    <string name="txtpass">Contrase\u00F1a:</string>
    <string name="seg">Seguridad</string>
    <string name="fin">Finalizar</string>
    <string name="beespere">Buscando establecimientos.\nEspere, por favor&#8230;</string>
    <string name="be">Buscando establecimientos&#8230;</string>
    <string name="acbdespere">Actualizando campos de la Base de Datos.\nEspere, por favor&#8230;</string>
    <string name="pedirayuda">Pedir ayuda</string>
    <string name="nointernet">No se ha detectado conexi\u00F3n a Internet. Revise sus ajustes e intente reconectar.</string>
    <string name="recargar">Recargar</string>
    <string name="textoayuda">¿Tienes alg\u00FAn problema que no sabes c\u00F3mo resolver, tras haber visto la ayuda? ¿Has encontrado alg\u00FAn fallo en la aplicaci\u00F3n? ¿Se te ocurre c\u00F3mo mejorarla? ¡Cu\u00E9ntanoslo todo en la siguiente ventana!</string>
    <string name="disoftayuda">javiercastellanoguillen@gmail.com</string>
    <string name="asuntoayuda">solicita ayuda para Distarea</string>
    <string name="mfallo">Fallo al enviar mensaje</string>
    <string name="merror">Error al enviar mensaje</string>
    <string name="chatViewPreviousMessages">Ver mensajes anteriores</string>
	<string name="chatSendingMessage">Enviando mensaje...</string>
	<string name="chatFilesHasBeenAttachedStart">\n\n Se han adjuntado</string>
	<string name="chatFilesHasBeenAttachedEnd">archivos a la copia por e-mail de este mensaje:</string>
	<string name="chatOneFileHasBeenAttached">\n\n Se ha adjuntado un archivo a la copia por e-mail de este mensaje:\n\t</string>
	<string name="chatMessageTo">Mensaje de </string>
	<string name="chatTo">para </string>
	<string name="conversations">Conversaciones</string>
	<string name="conversationsNoStarted">No tiene conversaciones iniciadas. Puede enviar un mensaje a un establecimiento favorito usando el bot\u00F3n de la esquina.</string>
	<string name="conversationsNew">New Conversation</string>
    <string name="tel">Tel\u00E9fono: </string>
    <string name="mailped">E-mail de pedidos: </string>
    <string name="mailmsj">E-mail de contacto: </string>
    <string name="web">P\u00E1gina Web: </string>
    <string name="dir">Direcci\u00F3n: </string>
    <string name="valor">Valoraci\u00F3n: </string>
    <string name="dltoast">Descargando todos los art\u00EDculos de la Tienda Virtual del Establecimiento&#8230;</string>
    <string name="textoaddcontacto">¿Est\u00E1 seguro de querer a\u00F1adir este contacto a la Lista de Contactos de su tel\u00E9fono?</string>
    <string name="contactoagregado">Se ha agregado el establecimiento a sus contactos</string>
    <string name="contactonoagregado">No se ha agregado el establecimiento a sus contactos</string>
    <string name="geolocalizacion">Geolocalizaci\u00F3n</string>
    <string name="prior">Prioritario</string>
    <string name="refresh">Refrescar</string>
    <string name="establishmentCall">Llamar al establecimiento</string>
	<string name="establishmentSendEmail">Enviar e-mail</string>
	<string name="establishmentAddToPhonebook">A\u00F1adir a la agenda de contactos del dispositivo</string>
	<string name="establishmentSendMessageViaDistarea">Enviar mensaje desde Distarea</string>
	<string name="establishmentLocateStoreMap">Localizar la tienda en el mapa</string>
	<string name="establishmentBookmark">A\u00F1adir a establecimientos prioritarios</string>
	<string name="establishmentSeePriorityMessage">Ver mensaje prioritario</string>
	<string name="establishmentCreateView">Crear/Ver pedido</string>
	<string name="establishmentDownloadVirtualStore">Descargar productos de la Tienda Virtual</string>
	<string name="establishmentPromotionDate">Este establecimiento no ha elaborado un comentario interno, o su promoci\u00F3n ha pasado de fecha.</string>
	<string name="establishmentUpdate">Actualizando informaci\u00F3n del establecimiento</string>
    <string name="pedidosanteriores">Pedidos Anteriores</string>
    <string name="reciclajearticulos">Reciclaje de art\u00EDculos</string>
    <string name="popupselvacia">No ha seleccionado ning\u00FAn art\u00EDculo de los de sus pedidos anteriores. Seleccionarlos ahora le ahorrar\u00E1 tener que volver a definir precios y cantidades. ¿Est\u00E1 seguro de que quiere seguir adelante?</string>
    <string name="insertarahora">¿Desea insertar alg\u00FAn art\u00EDculo ahora?</string>
    <string name="okeinsertarahora">Se han a\u00F1adido sus art\u00EDculos de los pedidos anteriores. ¿Quiere insertar alg\u00FAn art\u00EDculo m\u00E1s?</string>
    <string name="previousListPreviousOrder">No ha seleccionado ning\u00FAn art\u00EDculo de los de su pedido anterior. Seleccionarlos ahora le ahorrar\u00E1 tener que volver a definir precios y cantidades. ¿Est\u00E1 seguro de que quiere seguir adelante?</string>
	<string name="previousListAddingRepeated">Sumando cantidades de art\u00EDculo repetido.</string>
	<string name="previousListAddingItemAbove">A\u00F1adiendo art\u00EDculo creado anteriormente.</string>
	<string name="previousListItemCreated">Art\u00EDculo creado.</string>
	<string name="previousListDeviceNotSupported">Dispositivo no soportado</string>
    <string name="articulos">Art\u00EDculos</string>
    <string name="sel1">) seleccionado</string>
    <string name="selx">) seleccionados</string>
    <string name="txtsel">Seleccionado</string>
    <string name="borart">Borrar art\u00EDculos</string>
    <string name="addart">A\u00F1adir art\u00EDculos</string>
    <string name="busart">Buscar art\u00EDculo</string>
    <string name="resord">Reestablecer orden</string>
    <string name="itemListYourGoingTo">Va a borrar definitivamente estos</string>
    <string name="itemListFromTheHistory">art\u00EDculos del historial. ¿Est\u00E1 seguro?</string>
	<string name="ley_pulse">Pulse </string>
	<string name="ley_mensajeprivado">para enviar un mensaje privado al Establecimiento.</string>
	<string name="leyest_titulo">Pulse el nombre del Establecimiento en la parte superior para acceder directamente a la zona de pedidos.</string>
	<string name="leyest_icono">Mantenga pulsado el icono del Establecimiento para actualizar sus datos.</string>
	<string name="leyest_mensajeprioritario">para ver un mensaje publicado por el Establecimiento para todos los que lo consideren prioritario.</string>
	<string name="leyest_descargaproductos">para descargar la lista de productos del Establecimiento manualmente.</string>
    <string name="favorito">Favorito</string>
    <string name="menutitle">Men\u00FA Principal</string>
    <string name="establecimientos">Establecimientos</string>
    <string name="opciones">Configuraci\u00F3n</string>
    <string name="ayuda">Ayuda</string>
    <string name="tono">Tono para notificaciones</string>
    <string name="vibra">Vibraci\u00F3n en las notificaciones</string>
    <string name="vibras">Activa/desactiva vibraci\u00F3n para mensajes nuevos</string>
    <string name="ch">Comunicaci\u00F3n h\u00E1ptica</string>
    <string name="chs">Peque\u00F1a vibraci\u00F3n al pulsar botones</string>
    <string name="bg">Bot\u00F3n accesible</string>
    <string name="bgs">A\u00F1ade un bot\u00F3n grande en la ventana de Solicitud</string>
    <string name="vi">Ver Im\u00E1genes</string>
    <string name="vis">Permite ver fotos de los art\u00EDculos en las listas (tarda m\u00E1s)</string>
    <string name="cmain">Establecimiento inicial</string>
    <string name="du">Datos de Usuario</string>
    <string name="mss">Pide contrase\u00F1a antes de env\u00EDos</string>
    <string name="submenus">Toca para m\u00E1s opciones&#8230;</string>
    <string name="cnombre">Cambiar nombre</string>
    <string name="ccp">Cambiar c\u00F3digo postal</string>
    <string name="cmoneda">Cambiar moneda</string>
    <string name="ctipo">Cambiar tipo de cliente</string>
    <string name="cpass">Cambiar contrase\u00F1a</string>
    <string name="cseudonimo">Cambiar seud\u00F3nimo</string>
    <string name="cmail">Cambiar e-mail</string>
    <string name="ctel">Cambiar tel\u00E9fono</string>
    <string name="cdir">Cambiar direcci\u00F3n</string>
    <string name="cpais">Cambiar pa\u00EDs</string>
    <string name="tda">Actividades de Inter\u00E9s</string>
    <string name="cnemp">Cambiar nombre de la Empresa</string>
    <string name="ccodsuc">Cambiar c\u00F3digo de sucursal</string>
    <string name="aboutUs">Sobre nosotros</string>
	<string name="option2XMLSincronize">Sincronizar mensajes de Establecimiento</string>
	<string name="option2XMLSincronizeSummary">Busca si tienes un Establecimiento del que recibir mensajes</string>
	<string name="options3Watchout">¡Cuidado! No entrar si no se sabe lo que se hace</string>
	<string name="optionsAvXMLRemoveEstablishment">Borrar Establecimientos</string>
	<string name="optionsAvXMLRemoveEstablishmentSummary">Se eliminar\u00E1n de la base de datos interna todos los establecimientos</string>
	<string name="optionsAvXMLResetDate">Reiniciar fecha</string>
	<string name="optionsAvXMLResetDateSummary">Permite volver a ver el Mensaje Prioritario de los establecimientos</string>
	<string name="optionsAvXMLDownloadCNAE">Actualizar CNAEs</string>
	<string name="optionsAvXMLDownloadCNAESummary">Redescarga todos los c\u00F3digos CNAE de sus establecimientos</string>
	<string name="optionsAvXMLClientRequest">Solicitar cliente</string>
	<string name="optionsAvXMLClientRequestSummary">En autoventa y en asesor\u00EDas, solicita previamente el cliente</string>
    <string name="crecpass">Recordar contrase\u00F1a</string>
    <string name="cps">Pregunta secreta</string>
    <string name="crs">Respuesta secreta</string>
    <string name="texto1about">Esta aplicaci\u00F3n ha sido desarrollada por </string>
    <string name="enlaceabout"><b><u>Disoft Servicios Inform\u00E1ticos, S.L.</u></b></string>
    <string name="texto2about">\nSoluciones inform\u00E1ticas a la medida de su empresa.</string>
    <string name="version"><b>Versi\u00F3n:</b> </string>
	<string name="registerAutoLogin">Registro autom\u00E1tico</string>
	<string name="registerManualLogin">Registro manual</string>
	<string name="registerLogCode">C\u00F3digo de registro</string>
	<string name="registerCancel">Cancelar</string>
	<string name="registerContinue">Continuar</string>
    <string name="txtmsop2">¿Quieres activar el Modo Seguro? (Se te preguntar\u00E1 la contrase\u00F1a para varias funciones de la aplicaci\u00F3n)</string>
    <string name="txtmonedaop2">¿En qu\u00E9 moneda quieres ver tus compras?</string>
    <string name="txtCNAE">Seleccione los tipos de establecimiento de su inter\u00E9s. A los NO seleccionados no se les podr\u00E1 localizar ni crear pedidos.</string>
</resources>