<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
    <PreferenceScreen
	    android:key="codigoseguro"
	    android:layout_width="fill_parent"
	    android:title="Código seguro"/>
    
    <EditTextPreference
	    android:key="nombre"
	    android:title="@string/cnombre"
       	android:layout_width="fill_parent" />

	<EditTextPreference
	    android:key="pass"
	    android:title="@string/cpass"
       	android:layout_width="fill_parent"
       	android:inputType="textPassword" />

	<EditTextPreference
	    android:key="cp"
	    android:title="@string/ccp"
       	android:layout_width="fill_parent"
       	android:inputType="number"/>

	<ListPreference
        android:key="moneda"
        android:title="@string/cmoneda"
        android:layout_width="fill_parent"
        android:entries="@array/moneda"
        android:entryValues="@array/monedav"
        android:defaultValue="1" />

	<ListPreference
        android:key="tipo"
        android:title="@string/ctipo"
        android:layout_width="fill_parent"
        android:entries="@array/tipo"
        android:entryValues="@array/tipov"
        android:defaultValue="P" />

	<EditTextPreference
	    android:key="mail"
	    android:title="@string/cmail"
       	android:layout_width="fill_parent"
       	android:inputType="textEmailAddress"/>
	
	<EditTextPreference
	    android:key="seudonimo"
	    android:title="@string/cseudonimo"
       	android:layout_width="fill_parent"
       	android:inputType="textCapSentences"/>

	<EditTextPreference
	    android:key="tel"
	    android:title="@string/ctel"
       	android:layout_width="fill_parent"
       	android:inputType="phone"/>
        
    <EditTextPreference
	    android:key="dir"
	    android:title="@string/cdir"
       	android:layout_width="fill_parent"
       	android:inputType="textCapWords"/>
    
    <ListPreference
        android:key="pais"
        android:title="@string/cpais"
        android:layout_width="fill_parent"
        android:defaultValue="España" />
    
    <EditTextPreference
	    android:key="nemp"
	    android:title="@string/cnemp"
       	android:layout_width="fill_parent"
       	android:inputType="textCapWords"/>
    
    <PreferenceScreen
	    android:key="opCNAE"
	    android:layout_width="fill_parent"
	    android:title="@string/tda"/>
    
    <EditTextPreference
	    android:key="codsuc"
	    android:layout_width="fill_parent"
	    android:title="@string/ccodsuc"
       	android:inputType="number"/>
    
    <PreferenceScreen
	    android:key="syncest"
	    android:layout_width="fill_parent"
	    android:title="@string/option2XMLSincronize"
	    android:summary="@string/option2XMLSincronizeSummary"/>

</PreferenceScreen>