<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
    
    	<item 
    	    android:id="@+id/prioritario"
    	    android:orderInCategory="100"
        	app:showAsAction="always"
        	android:title="@string/prior"
        	android:icon="@drawable/rating_favorite"/>

    	<item 
    	    android:id="@+id/favorito"
    	    android:orderInCategory="200"
        	app:showAsAction="always"
        	android:title="@string/favorito"
        	android:icon="@drawable/rating_important"/>
    	
    	<item
    	    android:id="@+id/refrescarmenu"
    	    android:orderInCategory="300"
        	app:showAsAction="never"
        	android:title="@string/refresh"
        	android:icon="@drawable/navigation_refresh_light" />

</menu>
