<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" 
    	android:gravity="center_horizontal"
    	android:padding="30dip"
    	android:id="@+id/base">
    
    	<TextView
     		android:id="@+id/texto1"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:text="@string/texto1about"/>
    	
    	<TextView
     		android:id="@+id/enlace"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:textColor="@color/verdeDisoft3"
         	android:clickable="true"
         	android:text="@string/enlaceabout"/>
    	
    	<TextView
     		android:id="@+id/texto2"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:gravity="center"
         	android:text="@string/texto2about"/>

	</LinearLayout>
	
    <LinearLayout
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true">
	    	
	    <TextView 
	        android:id="@+id/version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/version"/>
	    
	</LinearLayout>
	
</RelativeLayout>