<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:panelFullBackground="@drawable/azbackground2">

    <item
        android:id="@+id/offline"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:title="Modo Offline" 
        android:icon="@drawable/conn2_l" />
    
    <item
        android:id="@+id/online"
        android:orderInCategory="55"
        app:showAsAction="always"
        android:title="Reconectar" 
        android:icon="@drawable/dc_l"
        android:visibility="gone" />
    
    <item
        android:id="@+id/scanner"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="Código QR" 
        android:icon="@drawable/qr_dark" />
    
    <item
    	android:id="@+id/overflow"
    	android:orderInCategory="150"
    	app:showAsAction="always"
    	android:icon="@drawable/menu_overflow_light"
    	android:title="@string/menutitle">
    	<menu>
    	    
    	<!-- <item
	        android:id="@+id/mensajes"
	        android:showAsAction="never"
	        android:title="@string/mensajes"
	        android:icon="@drawable/content_email" />  -->
    	
	    <item
	        android:id="@+id/establecimientos"
	        app:showAsAction="never"
	        android:title="@string/establecimientos"
	        android:icon="@drawable/tienda" />
	    
	    <item
	        android:id="@+id/configuracion"
	        app:showAsAction="never"
	        android:title="@string/opciones"
	        android:icon="@drawable/action_settings" />
	    
	    <item
	        android:id="@+id/ayuda"
	        app:showAsAction="never"
	        android:title="@string/ayuda"
	        android:icon="@drawable/action_help" />
	    
    	</menu>
    </item>

</menu>