<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bordeexterior"
    android:id="@+id/basedialog" >
    
    	<TextView
		    android:id="@+id/leyest_titulo" 
		    android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	      	android:textColor="@android:color/black"
	      	android:text="@string/leyest_titulo"
	      	android:textStyle="italic"/>
    
    	<TextView
		    android:id="@+id/leyest_icono" 
		    android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	      	android:textColor="@android:color/black"
	      	android:text="@string/leyest_icono"
	      	android:textStyle="italic"/>
		
		<LinearLayout
		    android:id="@+id/leyest_mensajeprivado"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/ley_pulse"/>
			
			<ImageView
			    android:layout_width="24dp"
		      	android:layout_height="24dp"
		      	android:paddingTop="-2dp"
		      	android:paddingLeft="2dp"
		      	android:paddingRight="2dp"
		      	android:src="@drawable/content_email"/>
			
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/ley_mensajeprivado"/>
		
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/leyest_mensajeprioritario"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/ley_pulse"/>
			
			<ImageView
			    android:layout_width="24dp"
		      	android:layout_height="24dp"
		      	android:paddingTop="-2dp"
		      	android:paddingLeft="2dp"
		      	android:paddingRight="2dp"
		      	android:src="@drawable/news"/>
			
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/leyest_mensajeprioritario"/>
		
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/leyest_descargaproductos"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:visibility="gone">
		
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/ley_pulse"/>
			
			<ImageView
			    android:layout_width="24dp"
		      	android:layout_height="24dp"
		      	android:paddingTop="-2dp"
		      	android:paddingLeft="2dp"
		      	android:paddingRight="2dp"
		      	android:src="@drawable/av_download"/>
			
			<TextView 
			    android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"
		      	android:textColor="@android:color/black"
		      	android:textStyle="italic"
		      	android:text="@string/leyest_descargaproductos"/>
		
		</LinearLayout>
		
</LinearLayout>