<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:id="@+id/base">
    
    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        android:id="@+id/englobe">

     	<TextView 
     	    android:id="@+id/txtms"
     	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/txtmsop2"
			android:background="@drawable/test3az"/>
     	
     	<CheckBox
     	    android:id="@+id/ms"
     	    android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
         	android:text="@string/ms"/>
     	
        <!-- Espacio extra -->
   		<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
     	
     	<TextView
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:text="@string/txtmonedaop2"
     	    android:background="@drawable/test3az"/>
     	
     	<!-- Espacio extra -->
    	<TextView 
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
     	
     	<Spinner
     	    android:id="@+id/moneda"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:entries="@array/moneda"
        	android:entryValues="@array/monedav"/>
     	
     	<!-- Espacio extra -->
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    	
    	<LinearLayout
    	    android:id="@+id/cnae"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:visibility="gone">
     	
     	<TextView
     	    android:id="@+id/txtcnae"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:text="@string/txtCNAE"
     	    android:background="@drawable/test3az"/>
     	
     	<!-- Espacio extra -->
    	<TextView 
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
     	
     	<LinearLayout
     		android:id="@+id/listaop2"
     		android:orientation="vertical"
         	android:layout_width="fill_parent"
         	android:layout_height="fill_parent"
         	android:drawSelectorOnTop="false"
		 	android:textSize="18sp"/>
     	
     	</LinearLayout>
     	
    </LinearLayout>
    	
    </ScrollView>

</LinearLayout>